<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo1"
        android:layoutDirection="ltr"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="370dp"
        android:layout_height="340dp"
        android:background="@drawable/ellips"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintHorizontal_bias="0.451"


        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/TheRightAddress"
        style="@style/h4"
        android:layout_width="328dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/theRightAddressMargin"
        android:gravity="center"
        android:text="@string/rightAddress"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        style="@style/blueButtonStyle"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/TheRightAddress"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@id/TheRightAddress"
        app:layout_constraintTop_toBottomOf="@id/TheRightAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        style="@style/whiteButtonStyle"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/TheRightAddress"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@id/TheRightAddress"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton2"
        app:layout_constraintVertical_bias="0.733"
        tools:ignore="UnknownId" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="571dp" />

</androidx.constraintlayout.widget.ConstraintLayout>